2DO COMMIT PROYECTOS

--- a/P2/proyectos/calculosJS/index.html
+++ b/P2/proyectos/calculosJS/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="estilos.css"> 
 </head>
 <body> 
-    <h1>.: Calculadora Básica :.</h1>
+    <h1>.:: Calculadora Básica ::.</h1>
     <hr>
     <label for="n1">Número 1:</label>
     <input type="number" id="n1" value="" autofocus><br>
