--- a/P2/proyectos/index.html
+++ b/P2/proyectos/index.html
@@ -63,7 +63,7 @@
             background-color: rgb(94, 57, 57);
             padding: 2rem;
             text-align: center;
-            color: white;
+            color: #FFF;
             
 
         }
