--- a/P2/proyectos/menu_horizontal_CSS/indeex.html
+++ b/P2/proyectos/menu_horizontal_CSS/indeex.html
@@ -31,7 +31,7 @@
     
     <main>
         <section id="estructuras">
-       <h2>Estructuras de interfaces web</h2> 
+       <h2>Estructuras de Interfaces Web</h2> 
     
     <p>Una interfaz web es: una estructura formada por una serie de elementos gráficos que permiten a los usuarios acceder a los contenidos de un sitio web. Haciendo un simil con un barco, podríamos decir, que son «los mandos e indicadores» que el autor de la web pone a nuestro alcance para poder «navegar» por el sitio web.</p>
     <img src="img/estructura_web.png" alt="estructura web"> <a href="#index"><img src="img/flecha.png" alt="flecha" width="50px" height="50px"></a>
