--- a/P3/PracticasDjango/proyectoUTDnormal/index.html
+++ b/P3/PracticasDjango/proyectoUTDnormal/index.html
@@ -31,7 +31,7 @@
        </div>
     </section>
     <footer>
-        <p>Django con Dagonline &copy; 2024 | Visitado el: 01/10/24</p>
+        <p>PaezOnline &copy; 2024 | Visitado el: 01/10/24</p>
     </footer>
 </body>
 </html>
